--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,11 @@
 @mixin for-size($size){
 
-    @if $size == med-screen{
+    @if $size == tablet{
+        @media(min-width:720px){
+            @content;
+        }
+    }
+    @else if $size == med-screen{
         @media (min-width:1020px){
             @content;
         }
@@ -28,20 +33,20 @@ body{
 
 .card{
     background:$Grayish-Blue;
-    height:300px;
-    width:400px;
+    height:50%;
+    width:100%;
     position: relative;
     border-radius: 10px;
 
     button{
         position: absolute;
-        right:50%;
-        left:43%;
+        left:40%;
         bottom:-30px;
         border:none;
         background:$Neon-Green;
         border-radius: 50%;
-        padding:20px;
+        width:20%;
+        height:20%;
         cursor:pointer;
         box-shadow: 0 0 10px 0 $Neon-Green;
     }
@@ -73,6 +78,12 @@ body{
         }
     }
 
+    @include for-size(tablet){
+        .card{
+            width:50%;
+        }
+    }
+
     @include for-size(med-screen){
         .img{
         img:nth-child(2){
@@ -80,6 +91,13 @@ body{
         }
         img:nth-child(1){
             display:none;
+        }
+    }
+    .card{
+        button{
+            width:15%;
+            height:30%;
+            left:43%;
         }
     }
     }
